# ronpaulcoincore

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  qt_translations.py  ronpaulcoin-qt.pro  ronpaulcoind.bash-completion  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  ronpaulcoin-qt.desktop  ronpaulcoin-qt.install  ronpaulcoin-qt.lintian-overrides  ronpaulcoin-qt.protocol  ronpaulcoind.bash-completion  ronpaulcoind.examples  ronpaulcoind.install  ronpaulcoind.lintian-overrides  ronpaulcoind.manpages  rules  watch
contrib/debian/examples/: ronpaulcoin.conf
contrib/debian/manpages/: ronpaulcoin-qt.1  ronpaulcoin.conf.5  ronpaulcoind.1
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-ronpaulcoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  background.psd  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  release-notes.md  release-process.md  tor.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-ronpaulcoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/pixmaps/: favicon.hqx  favicon.icns  ronpaulcoin-bc.hqx  ronpaulcoin-bc.icns
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  irc.cpp  irc.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  (+49 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: ronpaulcoin_find_bdb48.m4  ronpaulcoin_qt.m4  ronpaulcoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.cpp  (+58 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: ronpaulcoin_ach.ts  ronpaulcoin_af_ZA.ts  ronpaulcoin_ar.ts  ronpaulcoin_be_BY.ts  ronpaulcoin_bg.ts  ronpaulcoin_bs.ts  ronpaulcoin_ca.ts  ronpaulcoin_ca@valencia.ts  ronpaulcoin_ca_ES.ts  ronpaulcoin_cmn.ts  ronpaulcoin_cs.ts  ronpaulcoin_cy.ts  ronpaulcoin_da.ts  ronpaulcoin_de.ts  ronpaulcoin_de_AT.ts  ronpaulcoin_el_GR.ts  ronpaulcoin_en.ts  ronpaulcoin_eo.ts  ronpaulcoin_es.ts  ronpaulcoin_es_CL.ts  ronpaulcoin_es_DO.ts  ronpaulcoin_es_MX.ts  ronpaulcoin_es_UY.ts  ronpaulcoin_et.ts  ronpaulcoin_eu_ES.ts  ronpaulcoin_fa.ts  ronpaulcoin_fa_IR.ts  ronpaulcoin_fi.ts  ronpaulcoin_fr.ts  ronpaulcoin_fr_CA.ts  ronpaulcoin_gl.ts  ronpaulcoin_gu_IN.ts  ronpaulcoin_he.ts  ronpaulcoin_hi_IN.ts  ronpaulcoin_hr.ts  ronpaulcoin_hu.ts  ronpaulcoin_id_ID.ts  ronpaulcoin_it.ts  ronpaulcoin_ja.ts  ronpaulcoin_ka.ts  (+31 more)
src/qt/res/: ronpaulcoin-qt-res.rc
src/qt/res/icons/: ronpaulcoin.icns  ronpaulcoin_testnet.hqx
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_ronpaulcoin.cpp  util_tests.cpp
